Fix Bootstrap 5 styling issues: - Update themes to replace .custom-select with .form-select - Fix popular arguments dropdown alignment in compiler options - Fix TomSelect popout alignment and long compiler name display - Fix library menu dropdown color in theme

--- a/static/styles/themes/dark-theme.scss
+++ b/static/styles/themes/dark-theme.scss
@@ -196,7 +196,7 @@ textarea.form-control {
     background-color: rgba(49, 54, 60, 0.85);
 }
 
-.custom-select {
+.form-select {
     background-color: #76a1c8 !important;
 }
 
