--- a/static/styles/themes/one-dark-theme.scss
+++ b/static/styles/themes/one-dark-theme.scss
@@ -234,7 +234,7 @@ textarea.form-control {
     background-color: opacify($dark, 0.8);
 }
 
-.custom-select {
+.form-select {
     background-color: #dddddd !important;
     color: #000 !important;
 }
